# RealEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Headers/Components/: SpriteComponent.h
Headers/Core/: Error.h  Game.h  Result.h  Types.h
Headers/Device/: Allocator.h  Buffer.h  Command.h  Device.h  Image.h  Instance.h  Memory.h  PoolAllocator.h  Queue.h
Headers/Graphics/: Material.h  Renderer.h  Texture.h  Window.h
Headers/Managers/: GraphicsManager.h  MemoryManager.h  WindowManager.h  WorldManager.h
Shaders/: default.frag  default.vert  frag.spv  vert.spv
Sources/Components/: SpriteComponent.cpp
Sources/Core/: Game.cpp
Sources/Device/: Buffer.cpp  Device.cpp  Image.cpp  Instance.cpp  Memory.cpp  PoolAllocator.cpp  Queue.cpp
Sources/Graphics/: Material.cpp  Renderer.cpp  Texture.cpp  Window.cpp
Sources/Managers/: GraphicsManager.cpp  MemoryManager.cpp  WindowManager.cpp  WorldManager.cpp
Tests/: TestManagerFixture.h  TestManagers.cpp  TestResources.cpp
